--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -470,7 +470,6 @@ big {
 	width: 100%;
 	height: 100%;
 	opacity: 0.8;
-	background: #20232E;
 	content: "";
 	-webkit-transition: all 0.3s ease 0s;
 	-moz-transition: all 0.3s ease 0s;
@@ -481,7 +480,6 @@ big {
 	font-weight: 500;
 	text-align: center;
 	color: #fff;
-	background: #20232E;
 	display: inline-block;
 	padding: 14px 30px;
 	border-radius: 0px;
@@ -508,7 +506,7 @@ big {
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background: #1281E8;
+	background: #FFAA00;
 	-webkit-transform: scaleX(0);
 	transform: scaleX(0);
 	-webkit-transform-origin: 50%;
@@ -529,7 +527,6 @@ big {
 /* Primary */
 
 .btn.primary {
-	background: #20232E;
 	color: #fff;
 }
 
