--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -595,7 +595,7 @@ big {
 	display: inline-block;
 	text-align: center;
 	border-radius: 100%;
-	background: #1281E8;
+	background: #FFAA00;
 	color: #fff;
 	top: 0;
 	position: relative;
@@ -608,7 +608,7 @@ big {
 	top: 50%;
 	width: 100px;
 	height: 2px;
-	background: #1281E8;
+	background: #FFAA00;
 	left: 50%;
 	margin-left: -50px;
 	margin-top: -1px;
