--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -608,7 +608,7 @@ big {
 	top: 50%;
 	width: 100px;
 	height: 2px;
-	background: #FFAA00;
+	background: #1593C6;
 	left: 50%;
 	margin-left: -50px;
 	margin-top: -1px;
